--- a/react-timeline/src/style/componentsStyle/TimelineEvent.css
+++ b/react-timeline/src/style/componentsStyle/TimelineEvent.css
@@ -40,7 +40,7 @@
   padding: 15px;
   border-radius: 8px;
   position: relative;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(255, 23, 23, 0.1);
   z-index: 1;
 }
 
@@ -52,17 +52,16 @@
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background-color: #006A71;
-  border: 4px solid #F2EFE7;
+  border: 10px solid #006A71;
   z-index: 2;
 }
 
 .timeline-event.left::before {
-  right: -15px;
+  right: -10px; 
 }
 
 .timeline-event.right::before {
-  left: -15px;
+  left: -10px; 
 }
 
 .date-button {
