--- a/react-timeline/src/style/pagestyle/customTimeline.css
+++ b/react-timeline/src/style/pagestyle/customTimeline.css
@@ -56,11 +56,15 @@
   margin-top: 5px;
 }
 
-.timeline-list {
+.timeline-list ul {
   display: flex;
-  flex-wrap: wrap; 
-  gap: 10px;        
-  list-style: none; 
-  padding: 0;
-  margin-bottom: 20px;
+  flex-direction: row; 
+  gap: 10px; 
+  padding: 0 0 20px 0;
+  margin: 0;
+  list-style: none;
+}
+
+.timeline-list li {
+  margin: 0;
 }
