--- a/react-timeline/src/style/pagestyle/bubble.css
+++ b/react-timeline/src/style/pagestyle/bubble.css
@@ -75,25 +75,7 @@
   background: none;
   display: flex;
   justify-content: center;
+  margin: 20px 0;
 }
 
-.filter-button {
-  background-color: #F2EFE7;
-  color: #333;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 999px;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
-}
 
-.filter-button:hover {
-  background-color: #d6e6ff;
-}
-
-.filter-button.active {
-  background-color: #006A71;
-  color: white;
-}
