--- a/react-timeline/src/style/componentsStyle/Footer.css
+++ b/react-timeline/src/style/componentsStyle/Footer.css
@@ -6,7 +6,7 @@
   text-align: center;
   font-size: 1rem;
   font-weight: 400;
-  margin-top: auto;
+  margin-top: 0;
   box-shadow: inset 0 1px 3px rgba(255, 255, 255, 0.1);
   user-select: none;
 }
