--- a/react-timeline/src/style/pagestyle/customTimeline.css
+++ b/react-timeline/src/style/pagestyle/customTimeline.css
@@ -1,15 +1,10 @@
-.custom-timeline-page {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
 .custom-timeline-container {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
   padding: 20px;
+  flex:1;
 }
 
 .event-form {
