--- a/react-timeline/src/style/pagestyle/main.css
+++ b/react-timeline/src/style/pagestyle/main.css
@@ -177,4 +177,13 @@ body {
     color: #006A71;
 }
 
+.app-title{
+  font-size: 3rem;
+  font-weight: 800;
+  color: #006A71;
+  margin-bottom: 32px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
 
