--- a/react-timeline/src/style/componentsStyle/searchBar.css
+++ b/react-timeline/src/style/componentsStyle/searchBar.css
@@ -2,6 +2,7 @@
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
+  flex:1;
 }
 
 .search-bar-form {
@@ -79,16 +80,3 @@
   border-radius: 4px;
 }
 
-button {
-  padding: 8px 16px;
-  background: #006A71;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-button:hover {
-  background: #0056b3;
-}
