--- a/react-timeline/src/style/pagestyle/Search.css
+++ b/react-timeline/src/style/pagestyle/Search.css
@@ -1,5 +1,12 @@
 
-
+.search-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 20px;
+  flex:1;
+}
 
 .app-content-wrapper {
   display: flex;
