--- a/react-timeline/src/index.css
+++ b/react-timeline/src/index.css
@@ -29,6 +29,9 @@
   }
 }
 
+html {
+  @apply bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100 transition-colors duration-300;
+}
 body {
-  @apply bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100;
+  @apply min-h-screen transition-colors duration-300;
 }
